[package]
name = "artnet-rescaler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
artnet_protocol = "0.4.1"
log = "0.4.18"
midir = "0.9.1"
number = { git = "https://github.com/generalelectrix/number", branch = "main" }
serde = "1.0.163"
serde_yaml = "0.9.21"
simplelog = "0.12.1"
